--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="master_switch">Master Switch</string>
+    <string name="title_activity_contact_search">Contacts</string>
 
 </resources>
